--- a/package.json
+++ b/package.json
@@ -1,29 +1,52 @@
 {
-  "name": "extension-choch",
-  "version": "1.0.5",
-  "description": "CHOCH - Game: 404 Not Found",
-  "author": "EXT, Inc.",
+  "name": "extension-tldraw",
+  "version": "0.0.1",
+  "description": "TLDraw - Draw board",
+  "author": "Pavlo Symonov",
   "license": "UNLICENSED",
   "scripts": {
-    "build": "npm run build --prefix ./source && webpack --mode=production --node-env=production",
-    "dev": "npm run dev --prefix ./source",
+    "build": "webpack --mode=production --node-env=production",
+    "start": "webpack serve --port 3000 --mode=development --node-env=development",
     "lint": "eslint ."
   },
+  "dependencies": {
+    "@tldraw/assets": "^2.0.0-alpha.14",
+    "@tldraw/tldraw": "^2.0.0-alpha.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
     "@extpkg/types-console": "^1.0.1",
     "@extpkg/types-runtime": "^1.1.0",
     "@extpkg/types-tabs": "^1.1.0",
     "@extpkg/types-websessions": "^1.0.1",
     "@extpkg/types-webviews": "^1.0.2",
     "@extpkg/types-windows": "^1.1.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "eslint": "^8.48.0",
-    "ts-loader": "^9.4.4",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "html-inline-script-webpack-plugin": "^3.2.1",
+    "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
