--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@tldraw/assets": "^2.0.0-alpha.14",
-    "@tldraw/tldraw": "^2.0.0-alpha.14",
+    "@tldraw/assets": "2.0.0-alpha.14",
+    "@tldraw/tldraw": "2.0.0-alpha.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
